--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "version": "0.1.0",
   "author": "Yetunde Sola-Adebayo",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.7.3",
     "gatsby-image": "^2.1.1",
+    "gatsby-plugin-catch-links": "^2.0.15",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.1",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.19",
+    "jquery": "^1.9.1",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "reactstrap": "^8.0.0",
+    "sharp": "0.22"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
