--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yetunde Sola-Adebayo",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.7.3",
     "gatsby-image": "^2.1.1",
     "gatsby-plugin-catch-links": "^2.0.15",
